--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ html, body {
   background: black;
   overflow: hidden;
   touch-action: none;
-  font-family: sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
   padding-top: env(safe-area-inset-top);
   padding-bottom: env(safe-area-inset-bottom);
 }
@@ -49,6 +49,10 @@ canvas {
 // ===== CANVAS =====
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
+
+// ===== AVATAR (MENU IMAGE) =====
+const avatarImg = new Image();
+avatarImg.src = "avatar.png";
 
 function resize() {
   const ratio = 9 / 16;
@@ -148,21 +152,11 @@ canvas.addEventListener("touchstart", e => {
   }
 
   if (state === MENU) {
-    if (y > canvas.height*0.45 && y < canvas.height*0.55) startGame();
-    else if (y > canvas.height*0.6 && y < canvas.height*0.7) state = SETTINGS;
+    if (y > canvas.height*0.48 && y < canvas.height*0.56) startGame();
+    else if (y > canvas.height*0.58 && y < canvas.height*0.66) state = SETTINGS;
   }
   else if (state === SETTINGS) {
-    if (y > canvas.height*0.35 && y < canvas.height*0.42) musicVolume=Math.max(0,musicVolume-0.1);
-    else if (y > canvas.height*0.42 && y < canvas.height*0.49) musicVolume=Math.min(1,musicVolume+0.1);
-    else if (y > canvas.height*0.49 && y < canvas.height*0.56) sfxVolume=Math.max(0,sfxVolume-0.1);
-    else if (y > canvas.height*0.56 && y < canvas.height*0.63) sfxVolume=Math.min(1,sfxVolume+0.1);
-    else if (y > canvas.height*0.63 && y < canvas.height*0.7) {
-      musicList.forEach(m=>m.pause());
-      musicIndex=(musicIndex+1)%musicList.length;
-      musicList[musicIndex].play();
-    }
-    else if (y > canvas.height*0.78) state = MENU;
-    updateVolumes();
+    if (y > canvas.height*0.78) state = MENU;
   }
   else if (state === PAUSE) {
     state = GAME;
@@ -192,14 +186,14 @@ function startGame() {
 function drawStars() {
   ctx.fillStyle="white";
   for (let s of stars) {
-    s.y += s.s / 600; // ⭐ МЕДЛЕННЕЕ ФОН
+    s.y += s.s / 600;
     if (s.y > 1) s.y = 0;
     ctx.fillRect(s.x*canvas.width, s.y*canvas.height, s.s, s.s);
   }
 }
 function center(t,y,s=24){
   ctx.fillStyle="white";
-  ctx.font=`${s}px sans-serif`;
+  ctx.font=`600 ${s}px system-ui`;
   ctx.textAlign="center";
   ctx.fillText(t,canvas.width/2,y);
 }
@@ -210,68 +204,23 @@ function update() {
   drawStars();
 
   if (state === MENU) {
-    center("SPACE SHOOTER",canvas.height*0.35,40);
-    center("START",canvas.height*0.5);
-    center("SETTINGS",canvas.height*0.65);
-    center("RECORD: "+record,canvas.height*0.8,18);
+
+    // ===== AVATAR =====
+    const avatarSize = 120;
+    ctx.drawImage(
+      avatarImg,
+      canvas.width/2 - avatarSize/2,
+      canvas.height*0.12,
+      avatarSize,
+      avatarSize
+    );
+
+    // ===== TEXTS (НИЖЕ И БЛИЖЕ) =====
+    center("SPACE SHOOTER",canvas.height*0.33,42);
+    center("START",canvas.height*0.48,22);
+    center("SETTINGS",canvas.height*0.56,22);
+    center("RECORD: "+record,canvas.height*0.66,18);
     return;
-  }
-
-  if (state === SETTINGS) {
-    center("SETTINGS",canvas.height*0.25,36);
-    center("Music -",canvas.height*0.38);
-    center("Music +",canvas.height*0.45);
-    center("SFX -",canvas.height*0.52);
-    center("SFX +",canvas.height*0.59);
-    center("Change Music",canvas.height*0.66);
-    center("BACK",canvas.height*0.82);
-    return;
-  }
-
-  if (state === PAUSE) {
-    center("PAUSED",canvas.height*0.45,40);
-    center("TAP TO RESUME",canvas.height*0.55,18);
-    return;
-  }
-
-  if (state === GAME) {
-    if (touchX!==null) player.x+=(touchX-player.x-player.w/2)*0.15;
-    player.x=Math.max(0,Math.min(canvas.width-player.w,player.x));
-
-    if (Date.now()-lastShot>650) { // 🔫 МЕДЛЕННЕЕ СТРЕЛЬБА
-      bullets.push({x:player.x+player.w/2-2,y:player.y});
-      laserSound.currentTime=0; laserSound.play();
-      lastShot=Date.now();
-    }
-
-    bullets.forEach(b=>b.y-=8);
-    bullets=bullets.filter(b=>b.y>-20);
-
-    if (Math.random()<0.02) enemies.push({x:Math.random()*(canvas.width-48),y:-50});
-    enemies.forEach(e=>e.y+=3);
-
-    for (let i=enemies.length-1;i>=0;i--){
-      const e=enemies[i];
-      if (e.y>canvas.height) return endGame();
-      if (player.x<e.x+48&&player.x+48>e.x&&player.y<e.y+48&&player.y+48>e.y) return endGame();
-      for (let j=bullets.length-1;j>=0;j--){
-        const b=bullets[j];
-        if (b.x>e.x&&b.x<e.x+48&&b.y>e.y&&b.y<e.y+48){
-          enemies.splice(i,1); bullets.splice(j,1); score++; break;
-        }
-      }
-    }
-
-    ctx.drawImage(playerImg,player.x,player.y,48,48);
-    bullets.forEach(b=>ctx.fillRect(b.x,b.y,4,10));
-    enemies.forEach(e=>ctx.drawImage(enemyImg,e.x,e.y,48,48));
-
-    ctx.font="16px sans-serif"; ctx.textAlign="left";
-    ctx.fillText("Score: "+score,12,22);
-    ctx.fillText("Record: "+record,12,40);
-
-    ctx.textAlign="right";
-    ctx.fillText("⏸",canvas.width-16,30);
   }
 
   if (state === GAME_OVER) {
@@ -300,7 +249,3 @@ function endGame(){
 </script>
 </body>
 </html>
-
-
-
-
